--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,15 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
+
+    <string-array name="options">
+        <item>Cwiczenie 1</item>
+        <item>Cwiczenie 2</item>
+        <item>Cwiczenie 3</item>
+        <item>Cwiczenie 4</item>
+        <item>Cwiczenie 5</item>
+        <item>Cwiczenie 6</item>
+    </string-array>
 </resources>
+
+
